--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>goldbach.github.io</title>
+    <title>goldbach.github.io: {{ page.title }}</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/goldbach">View on GitHub</a>
 
-          <h1 id="project_title">goldbach.github.io: Welcome</h1>
+          <h1 id="project_title">goldbach.github.io: {{ page.title }}</h1>
           <h2 id="project_tagline">Craft beer, Tech and Politics. In that order</h2>
 
         </header>
