--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="goldbach.github.io : Pages">
-
     <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
-
-    <title>goldbach.github.io: {{ page.title }}</title>
+    <title>goldbach: {{ page.title }}</title>
   </head>
 
   <body>
@@ -16,10 +13,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+<!--
           <a id="forkme_banner" href="https://github.com/goldbach">View on GitHub</a>
-
-          <h1 id="project_title">goldbach.github.io: {{ page.title }}</h1>
-          <h2 id="project_tagline">Craft beer, Tech and Politics. In that order</h2>
+-->
+          <h1 id="project_title">goldbach: {{ page.title }}</h1>
+          <h2 id="project_tagline">Craft beer, Tech and Politics. In that order/h2>
 
         </header>
     </div>
